[project]
name = "labschapter2"
version = "0.1.0"
description = "collection of python labs demonstrating generators, iterators etc"
authors = [
    {name = "Eugene", email = "zhenyabruhovetsky@gmail.com"}
]

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"